--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+.margin-top{
+  margin-top: 20px;
+}
+.margin-bot{
+  margin-bottom: 20px;
+}
+.margin-left{
+  margin-left: 20px;
+}
+.margin-right{
+  margin-right: 20px;
+}
