--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
   <button routerLink="/about" class="btn btn-primary">About</button>
   <button routerLink="/contacts" class="btn btn-primary">Contacts</button>
   <button routerLink="/new-contact" class="btn btn-primary">New Contact</button>
+  <button routerLink="/add-contact" class="btn btn-primary">New Contact v2</button>
 </div>
 
 <!--<app-contacts></app-contacts>-->
