--- a/src/app/new-contact/new-contact.component.html
+++ b/src/app/new-contact/new-contact.component.html
@@ -1,6 +1,6 @@
 <div class="container margin-top">
   <div class="card">
-    <div class="card-header">Contact List</div>
+    <div class="card-header">New Contact</div>
     <div class="card-body">
         <div class="form-group">
           <label>username: </label>
@@ -20,11 +20,11 @@
         </div>
         <div class="form-group">
           <label>firstName: </label>
-          <input class="form-control" type="text" [(ngModel)]="contact.firstName" />
+          <input class="form-control" type="text" [(ngModel)]="contact.firstname" />
         </div>
         <div class="form-group">
           <label>lastName: </label>
-          <input class="form-control" type="text" [(ngModel)]="contact.lastName" />
+          <input class="form-control" type="text" [(ngModel)]="contact.lastname" />
         </div>
         <div class="form-group">
           <label class="margin-right">Account Status: </label>
