--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -21,7 +21,7 @@
           <td>{{user.email}}</td>
           <td>{{user.phone}}</td>
           <td>{{user.active}}</td>
-          <td>{{user.roles[0].role}}</td>
+          <td>{{user.roles[0].name}}</td>
         </tr>
       </table>
     </div>
