--- a/src/app/new-contact/new-contact.component.html
+++ b/src/app/new-contact/new-contact.component.html
@@ -20,11 +20,11 @@
         </div>
         <div class="form-group">
           <label>firstName: </label>
-          <input class="form-control" type="text" [(ngModel)]="contact.firstname" />
+          <input class="form-control" type="text" [(ngModel)]="contact.firstName" />
         </div>
         <div class="form-group">
           <label>lastName: </label>
-          <input class="form-control" type="text" [(ngModel)]="contact.lastname" />
+          <input class="form-control" type="text" [(ngModel)]="contact.lastName" />
         </div>
         <div class="form-group">
           <label class="margin-right">Account Status: </label>
