--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -2,7 +2,7 @@
   <div class="card">
     <div class="card-header">Contact List</div>
     <div class="card-body">
-      <table class="table table-striped">
+      <table class="table table-bordered">
         <tr>
           <th>Id</th>
           <th>Username</th>
@@ -12,6 +12,7 @@
           <th>Phone</th>
           <th>Active</th>
           <th>Role</th>
+          <th>Action</th>
         </tr>
         <tr *ngFor="let user of pageContacts">
           <td>{{user.id}}</td>
@@ -21,7 +22,13 @@
           <td>{{user.email}}</td>
           <td>{{user.phone}}</td>
           <td>{{user.active}}</td>
-          <td>{{user.roles[0].name}}</td>
+          <td>{{user.role.name}}</td>
+          <td>
+            <div class="btn-group btn-block">
+              <a type="button" (click)="onEditContact(user)" class="btn btn-warning col-6 clickable">Edit</a>
+              <a type="button" (click)="onDeleteContact(user)" class="btn btn-danger col-6 clickable">Delete</a>
+            </div>
+          </td>
         </tr>
       </table>
     </div>
