--- a/src/app/edit-contact/edit-contact.component.html
+++ b/src/app/edit-contact/edit-contact.component.html
@@ -2,10 +2,14 @@
   <div class="card">
     <div class="card-header">Add Contact v2</div>
     <div class="card-body">
-      <form #f="ngForm" (ngSubmit)="onSaveContact(f.value)">
+      <form #f="ngForm" (ngSubmit)="onEditContact(f.value)">
+        <div class="form-group" hidden>
+          <label>id: </label>
+          <input class="form-control" type="text" name="id" [(ngModel)]="contact.id"/>
+        </div>
         <div class="form-group">
           <label>username: </label>
-          <input class="form-control" type="text" name="username" #username="ngModel" ngModel minlength="5" required/>
+          <input class="form-control" type="text" name="username" #username="ngModel" [(ngModel)]="contact.username" minlength="5" required/>
           <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
             <div *ngIf="username.errors.required">Username is required.</div>
             <div *ngIf="username.errors.minlength">Username must be at least 5 characters long.</div>
@@ -13,40 +17,39 @@
         </div>
         <div class="form-group">
           <label>password: </label>
-          <input class="form-control" type="text" name="password" #password="ngModel" ngModel minlength="5" required/>
-          <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
-            <div *ngIf="password.errors.required">Password is required.</div>
-            <div *ngIf="password.errors.minlength">Password must be at least 5 characters long.</div>
+          <input class="form-control" type="text" name="password" #password="ngModel" ngModel minlength="5"/>
+          <div class="alert alert-info">
+            Laissez la case vide si vous ne voulez pas changer le mot de passe, ou entrez un mot de passe de 5 caractere minimum.
           </div>
         </div>
         <div class="form-group">
           <label>email: </label>
-          <input class="form-control" type="email" ngModel name="email" #email="ngModel" ngModel email/>
+          <input class="form-control" type="email" ngModel name="email" #email="ngModel" [(ngModel)]="contact.email" email/>
           <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
             <div *ngIf="email.errors.email">Email is required.</div>
           </div>
         </div>
         <div class="form-group">
           <label>phone: </label>
-          <input class="form-control" type="text" ngModel name="phone" />
+          <input class="form-control" type="text" [(ngModel)]="contact.phone" name="phone" />
         </div>
         <div class="form-group">
           <label>firstName: </label>
-          <input class="form-control" type="text" ngModel name="firstName" />
+          <input class="form-control" type="text" [(ngModel)]="contact.firstName" name="firstName" />
         </div>
         <div class="form-group">
           <label>lastName: </label>
-          <input class="form-control" type="text" ngModel name="lastName" />
+          <input class="form-control" type="text" [(ngModel)]="contact.lastName" name="lastName" />
         </div>
         <div class="form-group">
           <label class="margin-right">Account Status: </label>
           <!--<input class="form-control" type="number" [(ngModel)]="contact.active" />-->
           <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" id="active" ngModel name="active" class="custom-control-input" value=1 />
+            <input type="radio" id="active" [(ngModel)]="contact.active" name="active" class="custom-control-input" value=1 />
             <label class="custom-control-label" for="active">Active</label>
           </div>
           <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" id="inactive" ngModel name="active" class="custom-control-input" value=0 />
+            <input type="radio" id="inactive" [(ngModel)]="contact.active" name="active" class="custom-control-input" value=0 />
             <label class="custom-control-label" for="inactive">Inactive</label>
           </div>
         </div>
